Fixed bio block spacing to be always centered

--- a/main.css
+++ b/main.css
@@ -55,11 +55,14 @@ body{
   padding: 2em 4em 2em 4em;
   margin:0px;
   padding: 1em 2em 1em 2em;
+  margin: 100px 500px 100px 500px;
+
   */
   padding: 2em;
-  margin: 100px 500px 100px 500px;
-  min-width: 400px;
-  max-width: 800px;
+  margin: 0px 0px 50px 0px;
+  
+  min-width: 300px;
+  max-width: 400px;
   height: 100%;
   
   display:inline-block;
